﻿﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.1.x
------------------------------------------------------------------------------------------------------------------------

------------------------------------------------------------------------------------------------------------------------
1.1.22
------------------------------------------------------------------------------------------------------------------------

2015-02-06: Laurent Declercq
	RELEASE i-MSCP 1.1.22

ADDONS
	Added: Read/Write permissions on the <imscp>.mail_users table for the roundcube SQL user
	Fixed: Length of SQL's usernames and passwords is not validated ( they must be at least 6 characters long )
	Fixed: Single quotes in sql usernames must be escaped in configuration files ( PhpMyAdmin, Roundcube )

CONFIGS
	Added php5-json package ( Debian Jessie )

DAEMON
	Fixed: Messages must not be hardcoded in functions
	Fixed: Restart of some services fail when the backend ( imscp-rqst-mngr ) is run through the daemon
	Updated: Version to 1.2.2

ENGINE
	Fixed: Composer cache is not cleared correctly
	Fixed: LC_MESSAGES has not expected effect in backend's scripts
	Removed: policyd-weight and postgrey ( Postfix SMTP access policy delegation )

FRONTEND
	Added: Support for eAccelerator, WinCache, XCache and ZendOptimizerPlus opcode caches
	Fixed: Usage of autoloader instead of require_once
	Fixed: Wrong classname iMSCP_Listener ( should be iMSCP_Events_Listener )
	Fixed: Wrong classname iMSCP_Listener_PriorityQueue ( should be iMSCP_Events_Listener_PriorityQueue )

INSTALLER
	Fixed: Length of SQL's usernames and passwords is not validated ( they must be at least 6 characters long )
	Fixed: Migration from Courier to Dovecot is broken ( courier-dovecot-migrate.pl is run with a wrong option )
	Fixed: php5enmod command throws an error when a PHP module is missing ( PHP5.4 )