@@ -19,7 +19,6 @@
 #
 # @category    i-MSCP
 # @copyright   2010-2015 by i-MSCP | http://i-mscp.net
-# @author      Daniel Andreca <sci2tech@gmail.com>
 # @author      Laurent Declercq <l.declercq@nuxwin.com>
 # @link        http://i-mscp.net i-MSCP Home Site
 # @license     http://www.gnu.org/licenses/gpl-2.0.html GPL v2
@@ -33,121 +32,100 @@ use lib "$FindBin::Bin/../PerlLib";
 use iMSCP::Debug;
 use iMSCP::Bootstrapper;
 use Mail::Address;
+use MIME::Parser;
 use MIME::Entity;
-use Email::Simple;
+use Encode;
 
-# Turn off localisation features to force any command output to be in english
-$ENV{'LANG'} = 'C';
+$ENV{'LC_MESSAGES'} = 'C';
 
 # Do not clear screen at end of script
 $ENV{'IMSCP_CLEAR_SCREEN'} = 0;
 
-umask(027);
-
 newDebug('imscp-arpl-msgr/imscp-arpl-msgr.log');
 
-iMSCP::Bootstrapper->getInstance()->boot(
-	{ 'nolock' => 'yes', 'norequirements' => 'yes', 'config_readonly' => 'yes' }
-);
+iMSCP::Bootstrapper->getInstance()->boot({ 'nolock' => 'yes', 'norequirements' => 'yes', 'config_readonly' => 'yes' });
 
-sub run
-{
-	my $from = $ARGV[0];
+eval {
+	my $dbh = iMSCP::Database->factory()->getRawDb();
+	$dbh->{'RaiseError'} = 1;
 
-	$from =~ s/imscp-arpl\.//gim;
+	$dbh->do("DELETE FROM `autoreplies_log` WHERE ADDTIME(`time`, '24:00:00') < NOW()");
 
-	my $message = do { local $/; <STDIN> };
+	(my $from = $ARGV[0]) =~ s/imscp-arpl\.//;
 
-	my $database = iMSCP::Database->factory();
+	my $parser = new MIME::Parser;
+	$parser->output_to_core(1);
+	$parser->tmp_to_core(1);
 
-	my $rdata = $database->doQuery('delete', "DELETE FROM `autoreplies_log` WHERE ADDTIME(`time`, '24:00:00') < NOW()");
-	unless(ref $rdata eq 'HASH') {
-		error($rdata);
-		return 1;
-	}
+	my $oEnt = $parser->parse(\*STDIN) or die('Unable to parse message');
+	my $oHead = $oEnt->head() or die('Unable to get message header');
+	my $oBody = $oEnt->bodyhandle() or die('Unable to get message body');
+	undef $oEnt;
 
-	my $mail = Email::Simple->new($message);
-	my ($to) = Mail::Address->parse($mail->header('From'));
+	my ($to) = Mail::Address->parse($oHead->get('From')) or die("Unable to parse From field from message header");
+	$to = $to->address();
 
-	if (not $to) {
-		error("Unable to parse From header");
-		return 0;
-	}
-
-	$to = lc($to->address);
-
-	if(
-		$mail->header('X-Mailer') && $mail->header('X-Mailer') =~ /Auto-Reply Mailer/i ||
-		$mail->header('Auto-Submitted') && $mail->header('Auto-Submitted') =~ /auto-replied/i ||
-		$mail->header('Sender') && $mail->header('Sender') =~ /autoresponder/i ||
-		$mail->header('X-Autoresponse-From')
+	unless(
+		$oHead->get('X-Mailer') && $oHead->get('X-Mailer') =~ /Auto-Reply/i || $oHead->get('Auto-Submitted') &&
+		$oHead->get('Auto-Submitted') =~ /auto-replied/i || $oHead->get('Sender') &&
+		$oHead->get('Sender') =~ /autoresponder/i || $oHead->get('X-Autoresponse-From')
 	) {
-		return 0;
+		my $row = $dbh->selectrow_array(
+			"
+				SELECT
+					COUNT(`time`)
+				FROM
+					`autoreplies_log`
+				WHERE
+					`from` = ?
+				AND
+					`to` = ?
+				AND
+					ADDTIME(`time`, '24:00:00') > NOW()
+			",
+			undef,
+			$from,
+			$to
+		);
+
+		unless($row) {
+			$row = $dbh->selectrow_array(
+				'SELECT `mail_auto_respond_text` FROM `mail_users` WHERE `mail_addr` = ? AND `mail_auto_respond` = 1',
+				undef,
+				$from
+			);
+
+			if($row) {
+				my $nEnt = MIME::Entity->build(
+					'Type' => 'multipart/mixed; charset=utf-8',
+					'From' => $from,
+					'To' => $to,
+					'Subject' => '[Auto-Reply] ' . $oHead->get('Subject'),
+					'X-Autoresponse-From' => $from,
+					'X-Mailer' => "i-MSCP Auto-Reply Mailer"
+				);
+
+				$nEnt->attach(
+					'Type' => 'text/plain; charset=utf-8',
+					'Encoding' => '8bit',
+					'Description' => 'Mail User Auto-Reply Message',
+					'Data' => encode('UTF-8', $row)
+				);
+
+				$nEnt->attach(
+					'Type' => 'message/rfc822',
+					'Description' => 'Original Message',
+					'Data' => $oBody->as_string()
+				);
+
+				open my $fh, '|-', '/usr/sbin/sendmail -t -oi' or die("Unable to send auto-reply message: $!");
+				$nEnt->print($fh);
+				close $fh;
+
+				$dbh->do('INSERT INTO `autoreplies_log` (`time`,`from`,`to`) VALUES (NOW(),?,?)', undef, $from, $to);
+			}
+		}
 	}
+};
 
-	$rdata = $database->doQuery(
-		'time',
-		"SELECT `time` FROM `autoreplies_log` WHERE `from` = ? AND `to` = ? AND ADDTIME(`time`, '24:00:00') > NOW()",
-		$from,
-		$to
-	);
-	unless(ref $rdata eq 'HASH') {
-		error($rdata);
-		return 1;
-	}
-
-	return 0 unless ! %{$rdata};
-
-	$rdata = iMSCP::Database->factory()->doQuery(
-		'mail_auto_respond_text',
-		'SELECT `mail_auto_respond_text` FROM `mail_users` WHERE `mail_addr` = ? AND `mail_auto_respond` = 1',
-		$from
-	);
-	unless(ref $rdata eq 'HASH'){
-		error($rdata);
-		return 1;
-	}
-
-	return 0 unless %{$rdata};
-
-	my $out = new MIME::Entity;
-
-	$out->build(
-		From => $from,
-		To => $to,
-		Subject => '[Auto-Reply] ' . $mail->header('Subject'),
-		Type => 'multipart/mixed; charset=utf-8',
-		'X-Autoresponse-From' => $from,
-		'X-Mailer' => "i-MSCP Auto-Reply Mailer"
-	);
-
-	$out->attach(
-		Type => 'text/plain; charset=utf-8',
-		Encoding => '8bit',
-		Description => 'Mail User Auto-Reply Message',
-		Data => (keys %{$rdata})[0]
-	);
-
-	$out->attach(
-		Type => 'message/rfc822',
-		Description => 'Original Message',
-		Data => $message
-	);
-
-	open MAIL, '|-', '/usr/sbin/sendmail -t -oi' // fatal("Unable to send auto-reply message: $!");
-	$out->print(\*MAIL);
-	close MAIL;
-
-	# Log autoreply
-	$rdata = $database->doQuery(
-		'insert', 'INSERT INTO `autoreplies_log` (`time`, `from`, `to`) VALUES (NOW(), ?, ?)', $from, $to
-	);
-	unless(ref $rdata eq 'HASH'){
-		error($rdata);
-		return 1;
-	}
-
-	0;
-}
-
-exit run();
+fatal($@) if $@;
