@@ -1,8 +1,11 @@
-﻿﻿i-MSCP ChangeLog
+﻿﻿﻿i-MSCP ChangeLog
 
 ------------------------------------------------------------------------------------------------------------------------
 Git 1.1.x
 ------------------------------------------------------------------------------------------------------------------------
+
+BACKEND:
+	Fixed: Invalid argument at /usr/share/perl5/MIME/Entity.pm line 1878 ( autoreply script )
 
 ------------------------------------------------------------------------------------------------------------------------
 1.1.22
